--- a/CNN.ipynb
+++ b/CNN.ipynb
@@ -19,7 +19,7 @@
         "id": "I-TDyMBznyDQ"
       },
       "source": [
-        "# Lab 2 - Digit Recognition Using CNN"
+        "# Digit Recognition Using CNN"
       ]
     },
     {
