Update Fully Connected Feed Forward.ipynb

--- a/Fully Connected Feed Forward.ipynb
+++ b/Fully Connected Feed Forward.ipynb
@@ -6,7 +6,7 @@
     "id": "Jv1ZzawXrXMb"
    },
    "source": [
-    "# ** edit**\n"
+    "# ** Sentiment Analysis using Feed Forward Fully Connected Neural Network **\n"
    ]
   },
   {
